@@ -1,21 +1,21 @@
 /* 
- DccNiTghtmare: a satirical post-apocalyptical RPG.
+ DNT: a satirical post-apocalyptical RPG.
  Copyright (C) 2005-2012 DNTeam <dnt@dnteam.org>
  
- This file is part of DccNiTghtmare.
+ This file is part of DNT.
  
- DccNiTghtmare is free software: you can redistribute it and/or modify
+ DNT is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
- DccNiTghtmare is distributed in the hope that it will be useful,
+ DNT is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
- along with DccNiTghtmare.  If not, see <http://www.gnu.org/licenses/>.
+ along with DNT.  If not, see <http://www.gnu.org/licenses/>.
  */
 
 #include "moneywindow.h"
@@ -319,9 +319,9 @@ bool moneyWindow::treat(Farso::GuiObject* object, int eventInfo)
          else if(object == decButton)
          {
             curQty--;
-            if(curQty < 0)
+            if(curQty <= 0)
             {
-               curQty = 0;
+               curQty = 1;
             }
             sprintf(&buf[0], "%d", curQty);
             qtyText->setText(buf);
